Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7172

An uncheckable QToolButton gets checked after opening a modal dialog

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.7.0
    • 4.6.0
    • Widgets: Main Window
    • None
    • Windows
      Kubuntu works fine
    • 3fbedcd085b3e89e3646bf49264001ee216c5852

    Description

      A QAction (which is not checkable) is placed in a QToolBar. When triggering the action a QProgressDialog is shown for a short time. If the action is double clicked (clicked twice in a row at the speed of a double click) the action stays checked after the progress dialog is finished.

      This bug is reproducible with the attached example.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pullatti Prasanth Ullattil
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes