After showing modal windows, WM_LBUTTONUP for double click is ignored.

We should not ignore WM_xBUTTONUP messages after WM_xBUTTONDBLCLK. Treat
these messages like WM_xBUTTONDOWN messages.

Task-number: QTBUG-7172
Reviewed-by: Thierry
(cherry picked from commit 3fbedcd085b3e89e3646bf49264001ee216c5852)